# ev-node

./: .gitignore  .golangci.yml  .markdownlint.yaml  .mockery.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.html  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.da  EVOLVE_MANUAL_SETUP.md  HYBRID_SEQUENCING_ISSUE.md  Makefile  NOTICE  README.html  README.md  RELEASE.md  alex_questions.md  ams_update.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  buf.gen.evm.yaml  buf.gen.grpc.yaml  buf.gen.yaml  buf.yaml  codecov.yml  cover.out  go.mod  go.sum  go.work  go.work.example  go.work.sum  hashmap.json  index.html  install.sh  (+5 more)
.claude/: settings.local.json
.github/: RELEASE_QUICK_START.md  dependabot.yml
.just/: bench.just  build.just  codegen.just  dev.just  gen.just  help.just  lint.just  loadgen.just  proto.just  run.just  security.just  test.just  tools.just
adr/: adr-001-node-interface.html  adr-002-mempool.html  adr-003-peer-discovery.html  adr-004-core-types.html  adr-005-serialization.html  adr-006-da-interface.html  adr-007-header-commit-to-shares.html  adr-008-mempool-optimint-light-client.html  adr-009-state-fraud-proofs.html  adr-010-exec-api.html  adr-011-remote-signer.html  adr-012-based-sequencing.html  adr-013-single-sequencer.html  adr-014-header-and-data-separation.html  adr-015-rollkit-minimal-header.html  adr-016-genesis-file.html  adr-017-node-pruning.html  adr-018-rpc.html  adr-019-forced-inclusion-mechanism.html  adr-020-validation.html  adr-021-lazy-aggregation.html  adr-022-validator-network.html  adr-023-execution-owned-proposer-rotation.html  adr-template.html
api/: index.html
apps/: doc.go
assets/: CLAUDE.md.2LnHxbhI.lean.js  CLAUDE.md.7tM9ITP8.js  CLAUDE.md.C3_BRXRU.js  CLAUDE.md.C3_BRXRU.lean.js  CLAUDE.md.CMP3XKCd.lean.js  CLAUDE.md.CmHOKWTo.lean.js  README.md.Bj_fYsXp.js  README.md.Ca1jRMfO.js  README.md.CnUCpXLN.js  README.md.CnUCpXLN.lean.js  README.md.DRQ7IRNI.js  README.md.DRQ7IRNI.lean.js  README.md.DRy4tPo9.lean.js  README.md.DefLud-w.lean.js  README.md.DrLD560J.js  README.md.DrLD560J.lean.js  README.md.VI2sksGg.js  adr_adr-001-node-interface.md.BgLUp6f0.js  adr_adr-001-node-interface.md.CoYVvHgc.lean.js  adr_adr-001-node-interface.md.wmQfitpF.js  adr_adr-001-node-interface.md.wmQfitpF.lean.js  adr_adr-001-node-interface.md.wsqfLV-C.js  adr_adr-002-mempool.md.CANgUf24.js  adr_adr-002-mempool.md.CANgUf24.lean.js  adr_adr-002-mempool.md.CIWLTXrS.lean.js  adr_adr-002-mempool.md.CpTAB1cb.lean.js  adr_adr-002-mempool.md.D8X5iisL.js  adr_adr-002-mempool.md.D8X5iisL.lean.js  adr_adr-002-mempool.md.jjyuSDei.js  adr_adr-003-peer-discovery.md.BA4iP_jR.js  adr_adr-003-peer-discovery.md.DYDJIBw-.js  adr_adr-003-peer-discovery.md.DYDJIBw-.lean.js  adr_adr-003-peer-discovery.md.Dm99DPYX.js  adr_adr-003-peer-discovery.md.Dm99DPYX.lean.js  adr_adr-003-peer-discovery.md.DtFgi-mA.js  adr_adr-003-peer-discovery.md._1rHKimS.lean.js  adr_adr-004-core-types.md.BC0bF0xD.lean.js  adr_adr-004-core-types.md.BEEL3JJZ.lean.js  adr_adr-004-core-types.md.CF-ncf56.js  adr_adr-004-core-types.md.CF-ncf56.lean.js  (+1234 more)
block/: DIVERGENCE.md  aggregation.go  aggregation_test.go  components.go  components_test.go  da_includer.go  da_includer_test.go  da_speed_test.go  direct_tx.go  direct_tx_reaper.go  direct_tx_reaper_test.go  executetxs_failure_test.go  forced_inclusion_tracing.go  forced_inclusion_tracing_test.go  integration_test.go  lazy_aggregation_test.go  manager.go  manager_test.go  metrics.go  metrics_helpers.go  metrics_test.go  namespace_test.go  namespace_tests.go  node.go  node_test.go  pending_base.go  pending_base_test.go  pending_data.go  pending_headers.go  public.go  publish_block_p2p_test.go  publish_block_test.go  reaper.go  reaper_test.go  retriever.go  retriever_da.go  retriever_da_test.go  retriever_p2p.go  retriever_p2p_test.go  retriever_store.go  (+11 more)
client/: README.md
client/crates/client/: Cargo.toml  README.md
client/crates/client/examples/: basic.rs
client/crates/client/src/: compression.rs  config.rs  error.rs  health.rs  lib.rs
client/crates/client/tests/: compression_test.rs
client/crates/types/: Cargo.toml  README.md  build.rs
client/crates/types/src/: compression.rs  lib.rs
client/crates/types/src/proto/: evnode.v1.messages.rs  evnode.v1.rs  evnode.v1.services.rs
client/crates/types/tests/: compression_test.rs  feature_test.rs
compression/: README.md  benchmark.go  benchmark_test.go  compression.go  compression_test.go  compressor.go  da.go  da_test.go  examples_test.go  (+1 more)
(+4870 files in other folders)
