[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/evstack/ev-node"

[workspace]
members = ["client/crates/types", "client/crates/client"]
resolver = "2"

[workspace.dependencies]
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", features = ["transport"] }
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
walkdir = "2.5"
