[package]
name = "ev-types"
version = "0.0.1"
edition = "2021"
authors = ["Ev Contributors"]
description = "Protocol buffer generated types for Ev"
documentation = "https://docs.rs/ev-types"
# homepage = "https://ev.dev"
repository = "https://github.com/evstack/ev-node"
license = "Apache-2.0"
keywords = ["ev", "blockchain", "protobuf", "grpc"]
categories = ["api-bindings", "encoding"]

[features]
default = ["std", "grpc", "compression"]
std = ["prost/std", "prost-types/std", "bytes?/std"]
compression = ["std", "bytes", "thiserror", "ruzstd"]
grpc = ["tonic", "std"]  # Enable gRPC support (both client and server code are always generated)

[build-dependencies]
tonic-prost-build = { workspace = true }
prost-build = { workspace = true }
walkdir = { workspace = true }

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, optional = true, features = ["transport"] }
tonic-prost = { workspace = true }

bytes = { version = "1.5", optional = true, default-features = false }
thiserror = { version = "1.0", optional = true }
ruzstd = { version = "0.8.1", optional = true }
